--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <h3 class= "course-title">Learn Python: The Complete Python Programming Course</h3>
                 <p id = "instructor">Avinash Jane, The Codex</p>
                 <p class="star">4.6 <i class="fa fa-star-o" aria-hidden="true"></i><span class = "enrol-no">(378889)</span></p>
-                <p class = "price-course">₦14900</p>
+                <p class = "price-course">&dollar; 15.02</p>
                     </a>
                 </div>
 
