--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <section>
         <div id = "home-top">
-            <img src="" alt="">
+            <img src="images/background1.jpg" alt="">
         </div>
 
         <div class="course-section">
@@ -60,34 +60,35 @@
             <div class="video-box">
                 <div class="course1">
                     <a href="#">
-                <img src="https://img-c.udemycdn.com/course/240x135/394676_ce3d_5.jpg" alt="">
-                <h3 class= "course-title">Learn Python: The Complete Python Programming Course</h3>
-                <p id = "instructor">Avinash Jane, The Codex</p>
-                <p class="star">4.6 <i class="fa fa-star-o" aria-hidden="true"></i><span class = "enrol-no">(378889)</span></p>
-                <p class = "price-course">₦14900</p>
+                    <img src="images/image1.jpg" alt="">
+                    <h3 class= "course-title">Learn Python: The Complete Python Programming Course</h3>
+                    <p id = "instructor">Avinash Jane, The Codex</p>
+                    <p class="star">4.6 <i class="fa fa-star-o" aria-hidden="true"></i><span class = "enrol-no">(378889)</span></p>
+                    <p class = "price-course">&dollar; 15.02</p>
                     </a>
                 </div>
 
 
                  <div class="course1">
                     <a href="#">
-                <img src="images/image2.jpg" alt="">
-                <h3 class= "course-title">Learning Python for Data analysis and Visualization/h3>
-                <p id = "instructor">Jones Portilla</p>
-                <p class="star">4.7 <i class="fa fa-star-o" aria-hidden="true"></i><span class = "enrol-no">(164281)</span></p>
-                <p class = "price-course">&dollar; 16.99</p>
-                </a>
+                    <img src="images/image2.jpg" alt="">
+                    <h3 class= "course-title">Learning Python for Data analysis and Visualization
+                    </h3>
+                    <p id = "instructor">Jones Portilla</p>
+                    <p class="star">4.7 <i class="fa fa-star-o" aria-hidden="true"></i><span class = "enrol-no">(164281)</span></p>
+                    <p class = "price-course">&dollar; 16.99</p>
+                    </a>
                 </div>
 
 
                  <div class="course1">
                     <a href="#">
-                <img src="images/python.jpg" alt="">
-                <h3 class= "course-title">Learn Python from scratch-For Beginners</h3>
-                <p id = "instructor">Edwin Diaz</p>
-                <p class="star">4.7 <i class="fa fa-star-o" aria-hidden="true"></i><span class = "enrol-no">(858889)</span></p>
-                <p class = "price-course">&dollar; 14.22</p>
-                </a>
+                    <img src="images/python.jpg" alt="">
+                    <h3 class= "course-title">Learn Python from scratch-For Beginners</h3>
+                    <p id = "instructor">Edwin Diaz</p>
+                    <p class="star">4.7 <i class="fa fa-star-o" aria-hidden="true"></i><span class = "enrol-no">(858889)</span></p>
+                    <p class = "price-course">&dollar; 14.22</p>
+                    </a>
                 </div>
 
 
@@ -117,6 +118,46 @@
             
 
 
+        </div>
+        <div class="course-video-box2">
+                <h1>Students are viewing</h1>
+                <div class="video-box">
+                    <div>
+                        <img src="images/image2-1.jpg" alt="python1" class="image2-1">
+                        <h4>The Complete 2023 Web <br> Development Bootcamp.</h4>
+                            <p>Dr.Angela Yu</p>
+                            <p>4.7 (242,625)</p>
+                            <a href="#"><button>Bestseller</button></a>
+                    </div>
+                    <div>
+                        <img src="images/image2-2.jpg" alt="python1" class="image2-2">
+                        <h4>100 Days of Code: The complete Python Pro Bootcamp for 2023</h4>
+                        <p>Dr.Angela Yu</p>
+                        <p>4.7 (157,481)</p>
+                        <a href="#"><button>Bestseller</button></a>
+                    </div>
+                    <div>
+                        <img src="images/js.jpg" alt="python1" class="image2-3">
+                        <h4>The Complete JavaScript Course for 2023: From Zero to Expert!</h4>
+                        <p>Jonas Schmedtmann</p> 
+                        <p>4.7 (159,378)</p>
+                        <a href="#"><button>Bestseller</button></a>
+                    </div>
+                    <div>
+                        <img src="images/react.jpg" alt="python1" class="image2-3">
+                        <h4>React- The Complete Guide (include  <br> Hooks, React Router, Redux) </h4>
+                        <p>Academind by Maximilian Schwarzmuller,...</p>
+                        <p>4.6 (169,129)</p>
+                        <a href="#"><button>Bestseller</button></a>
+                    </div>
+                    <div>
+                        <img src="images/image2-5.jpg" alt="python1" class="image2-5"> <br>
+                        <h4>Ultimate AWS Certified Solutions Architect Associate... </h4>
+                        <p>Stephane Maareek| AWS Certified Cloud...</p>   
+                        <p>4.7 (157,109)</p>
+                        <a href="#"><button>Bestseller</button></a>
+                </div>
+            </section>
         </div>
 
 
